--- a/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
+    <!--ícone da aba-->
+    <link rel="shortcut icon" href="~/Lib/Images/smnicon.png">
     <!--Fonte de ícones do Google-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Css do materialize-->
     <link href="~/Lib/Css/materialize.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Lib/Css/Geral.css" rel="stylesheet" type="text/css">
     <!--Importação do jQuery(deve vir antes dos scripts do Materialize)-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!--Javascript do materialize-->
