--- a/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!--Javascript do materialize-->
     <script src="~/Lib/Javascript/materialize.min.js"></script>
+    <script src="~/Lib/Javascript/Inicializacoes.js"></script>
 </head>
 <body>
     <!--Helper que renderiza o conteudo das views no corpo da página-->
