master - Adicionando views de produto

--- a/ProjetoCursoFeriasSMN/Views/Cliente/DeletaCliente.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/DeletaCliente.cshtml
@@ -3,7 +3,7 @@
 
 <div id="modalDeletarCliente" class="modal">
     <div class="modal-content">
-        <h4 class="bold">Deseja mesmo excluir este cliente?</h4>
+        <h4 class="bold">Deseja mesmo deletar este cliente?</h4>
         <div class="row">
             <form class="col s12" action="@Url.Action("DeletarConfirma")">
                 <div class="row">
