--- a/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
@@ -87,7 +87,7 @@
     </div>
     <div class="modal-footer">
         <a class="modal-action modal-close waves-effect waves-light btn" href="#!" type="submit">
-            <i class="material-icons left">send</i>Cadastrar
+            <i class="material-icons left">create</i>Editar
         </a>
     </div>
 </div>
