--- a/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
@@ -1,1 +1,34 @@
 ﻿@{ Layout = null;}
+@model ProjetoCursoFeriasSMN.Models.Produto
+
+<div id="modalCadastroCliente" class="modal">
+    <div class="modal-content">
+        <h4 class="bold">Deseja mesmo deletar este produto? </h4>
+        <div class="row">
+            <form class="col s12" action="@Url.Action("Deletar")">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="txtIdProduto">Código do produto</label>
+                        <input id="txtIdProduto" name="Id" type="text" disabled value="@Model.CodigoProduto">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtNomeProduto">Nome</label>
+                        <input id="txtNomeProduto" name="Nome" type="text" disabled value="@Model.Nome">
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtEstoque">Cpf</label>
+                        <input type="number" name="estoque" id="txtEstoque" disabled value="@Model.Estoque">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a class="modal-action modal-close waves-effect waves-light btn" href="#!" type="submit">
+            <i class="material-icons left">delete_forever</i>Confirma
+        </a>
+    </div>
+</div>
+
