master - Finalizando tela de detalhes e exclusão de cliente(html selects)

--- a/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
@@ -92,3 +92,15 @@
     </div>
 </div>
 
+<script>
+
+    var opcao = "@Model.Endereco.Estado";
+
+    //Deixando a opção certa selecionada
+    $("#txtEstado option").each(function(option) {
+        if ($(option).text() == opcao)
+            $(this).attr("selected", "selected");
+    });
+
+</script>
+
