--- a/ProjetoCursoFeriasSMN/Views/Produto/CadastraProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/CadastraProduto.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ Layout = null;}
 
-<div id="modalCadastroCliente" class="modal">
+<div id="modalCadastroProduto" class="modal">
     <div class="modal-content">
         <h4 class="bold">Cadastro de produto</h4>
         <div class="row">
