--- a/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
@@ -1,10 +1,11 @@
 ﻿@{ Layout = null;}
 @model IEnumerable<ProjetoCursoFeriasSMN.Models.Cliente>
 
-<!--Nesta div será carregada a modal que servirá para editar os clientes-->
-<div id="modalEdicaoCliente"></div>
-
-<div id="modalDeletaCliente"></div>
+<!--Div's onde serão carregadas as modals(formulários)-->-->
+<div id="modalDeletarCliente"></div>
+<div id="modalEditarCliente"></div>
+<div id="modalDetalharCliente"></div>
+@Html.Partial("CadastraCliente")
 
 <table class="striped">
     <thead>
@@ -33,13 +34,20 @@
                     <td>@cliente.Telefone</td>
                     <td>@cliente.Email</td>
                     <td style="display: flex">
-                        <a class="btn-floating waves-effect waves-light red" onclick="EditaCliente(this)">
+                        <a class="btn-floating waves-effect waves-light red" onclick="DetalhesCliente(this)" data-position="bottom"
+                           data-delay="50" data-tooltip="Detalhes">
+                            <i class="material-icons">info</i>
+                        </a>
+                        <a class="btn-floating waves-effect waves-light red" onclick="EditaCliente(this)" data-position="bottom"
+                           data-delay="50" data-tooltip="Editar">
                             <i class="material-icons">mode_edit</i>
                         </a>
-                        <a class="btn-floating waves-effect waves-light red" onclick="DeletaCliente(this)">
+                        <a class="btn-floating waves-effect waves-light red" onclick="ListaVendas(this)" data-position="bottom"
+                           data-delay="50" data-tooltip="Vendas deste cliente">
                             <i class="material-icons">shopping_cart</i>
                         </a>
-                        <a class="btn-floating waves-effect waves-light red" onclick="ListaVendas(this)">
+                        <a class="btn-floating waves-effect waves-light red" onclick="DeletaCliente(this)" data-position="bottom"
+                           data-delay="50" data-tooltip="Deletar">
                             <i class="material-icons">delete</i>
                         </a>
                     </td>
@@ -56,6 +64,23 @@
 </table>
 
 <script>
+    
+    function DetalhesCliente(element) {
+        var codigoCliente = $(element).closest("tr").attr("data-codigoCliente");
+
+        //Carregando os dados da modal
+        $.get('@Url.Action("DetalharCliente","Cliente")',
+                {
+                    codigoCliente: codigoCliente
+                })
+            .done(function (data) {
+                $("#modalDetalharCliente").html(data);
+                //Abrindo a modal
+                $('#modalDetalhesCliente').modal("open");
+            }).fail(function (xhr) {
+                Materialize.toast(xhr.responseText, 5000);
+            });
+    }
 
     function EditaCliente(element) {
         var codigoCliente = $(element).closest("tr").attr("data-codigoCliente");
@@ -65,8 +90,9 @@
                     codigoCliente: codigoCliente
                 })
             .done(function(data) {
-                $("#modalEdicaoCliente").html(data);
-            }).fail(function(data) {
+                $("#modalEditarCliente").html(data);
+                $('#modalEdicaoCliente').modal("open");
+            }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
     }
@@ -79,8 +105,9 @@
                     codigoCliente: codigoCliente
                 })
             .done(function (data) {
-                $("#modalDeletaCliente").html(data);
-            }).fail(function (data) {
+                $("#modalDeletarCliente").html(data);
+                $('#modalDeletarCliente').modal("open");
+            }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
     }
