--- a/ProjetoCursoFeriasSMN/Views/Produto/GridProdutos.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/GridProdutos.cshtml
@@ -13,7 +13,7 @@
             <th>Estoque</th>
             <th>
                 <a class="btn-floating waves-effect waves-light red tooltipped modal-trigger" style="float: right" data-position="left"
-                   data-delay="50" data-tooltip="Novo" href="#modalCadastroProduto">
+                   data-delay="50" data-tooltip="Novo" href="#modalCadastroProduto" onclick="SalvarProduto(this)">
                     <i class="material-icons">add_circle</i>
                 </a>
             </th>
@@ -28,7 +28,7 @@
                     <td>@produto.Nome</td>
                     <td>@produto.Estoque</td>
                     <td style="display: flex">
-                        <a class="btn-floating waves-effect waves-light red" onclick="EditaProduto(this)" data-position="bottom"
+                        <a class="btn-floating waves-effect waves-light red" onclick="SalvarProduto(this)" data-position="bottom"
                            data-delay="50" data-tooltip="Editar">
                             <i class="material-icons">mode_edit</i>
                         </a>
@@ -51,7 +51,7 @@
 
 <script>
 
-    function EditaProduto(element) {
+    function SalvarProduto(element) {
         var codigoProduto = $(element).closest("tr").attr("data-codigoProduto");
 
         $.get('@Url.Action("Salvar","Produto")',
