--- a/ProjetoCursoFeriasSMN/Views/Produto/EditaProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/EditaProduto.cshtml
@@ -5,7 +5,7 @@
     <div class="modal-content">
         <h4 class="bold">Deseja mesmo deletar este produto? </h4>
         <div class="row">
-            <form class="col s12" action="@Url.Action("Deletar")">
+            <form class="col s12" action="@Url.Action("Salvar")">
                 <div class="row">
                     <div class="input-field col s12">
                         <label for="txtIdProduto">Código do produto</label>
