--- a/ProjetoCursoFeriasSMN/Views/Produto/GridProdutos.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/GridProdutos.cshtml
@@ -1,9 +1,11 @@
 ﻿@{ Layout = null;}
+@using System.Web.Mvc.Html
 @model IEnumerable<ProjetoCursoFeriasSMN.Models.Produto>
 
 <div id="modalEdicaoProduto"></div>
 <div id="modalDeletaProduto"></div>
-<div id="modalCadastraProduto"></div>
+<div id="modalDetalharProduto"></div>
+@Html.Partial("CadastraProduto")
 
 <table class="striped">
     <thead>
@@ -13,7 +15,7 @@
             <th>Estoque</th>
             <th>
                 <a class="btn-floating waves-effect waves-light red tooltipped modal-trigger" style="float: right" data-position="left"
-                   data-delay="50" data-tooltip="Novo" href="#modalCadastroProduto" onclick="SalvarProduto(this)">
+                   data-delay="50" data-tooltip="Novo" href="#modalCadastroProduto" onclick="CadastraProduto(this)">
                     <i class="material-icons">add_circle</i>
                 </a>
             </th>
@@ -28,7 +30,11 @@
                     <td>@produto.Nome</td>
                     <td>@produto.Estoque</td>
                     <td style="display: flex">
-                        <a class="btn-floating waves-effect waves-light red" onclick="SalvarProduto(this)" data-position="bottom"
+                        <a class="btn-floating waves-effect waves-light red" onclick="DetalhaProduto(this)" data-position="bottom"
+                           data-delay="50" data-tooltip="Detalhes">
+                            <i class="material-icons">info</i>
+                        </a>
+                        <a class="btn-floating waves-effect waves-light red" onclick="EditaProduto(this)" data-position="bottom"
                            data-delay="50" data-tooltip="Editar">
                             <i class="material-icons">mode_edit</i>
                         </a>
@@ -51,15 +57,32 @@
 
 <script>
 
-    function SalvarProduto(element) {
+    function EditaProduto(element) {
         var codigoProduto = $(element).closest("tr").attr("data-codigoProduto");
 
-        $.get('@Url.Action("Salvar","Produto")',
+        $.get('@Url.Action("Editar","Produto")',
                 {
                     codigoProduto: codigoProduto
                 })
             .done(function (data) {
                 $("#modalEdicaoProduto").html(data);
+                $("#modalEditarProduto").modal("open");
+            }).fail(function (xhr) {
+                Materialize.toast(xhr.responseText, 5000);
+            });
+    }
+
+
+    function DetalhaProduto(element) {
+        var codigoProduto = $(element).closest("tr").attr("data-codigoProduto");
+
+        $.get('@Url.Action("DetalharProduto","Produto")',
+                {
+                    codigoProduto: codigoProduto
+                })
+            .done(function (data) {
+                $("#modalDetalharProduto").html(data);
+                $("#modalDetalhesProduto").modal("open");
             }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
@@ -74,6 +97,7 @@
                 })
             .done(function (data) {
                 $("#modalDeletaProduto").html(data);
+                $("#modalDeletarProduto").modal("open");
             }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
