--- a/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ Layout = null;}
 @model ProjetoCursoFeriasSMN.Models.Produto
 
-<div id="modalCadastroCliente" class="modal">
+<div id="modalDeletarProduto" class="modal">
     <div class="modal-content">
         <h4 class="bold">Deseja mesmo deletar este produto? </h4>
         <div class="row">
