--- a/ProjetoCursoFeriasSMN/Views/Produto/TableProdutos.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/TableProdutos.cshtml
@@ -15,14 +15,13 @@
             <th>Estoque</th>
             <th>
                 <a class="btn-floating waves-effect waves-light red tooltipped modal-trigger" style="float: right" data-position="left"
-                   data-delay="50" data-tooltip="Novo" href="#modalCadastroProduto" onclick="CadastraProduto(this)">
+                   data-delay="50" data-tooltip="Novo" href="#modalCadastroProduto">
                     <i class="material-icons">add_circle</i>
                 </a>
             </th>
         </tr>
     </thead>
-    <tbody>
-    </tbody>
+    <tbody></tbody>
 </table>
 
 <script>
