--- a/ProjetoCursoFeriasSMN/Views/Produto/CadastraProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/CadastraProduto.cshtml
@@ -4,7 +4,12 @@
     <div class="modal-content">
         <h4 class="bold">Cadastro de produto</h4>
         <div class="row">
-            <form class="col s12" action="@Url.Action("Salvar")">
+           @Ajax.BeginForm("Salvar","Produto",new AjaxOptions
+           {
+               HttpMethod = "POST",
+               OnSuccess = "RecarregaGrid(data)",
+               OnFailure = "Error(xhr)"
+           }){ 
                 <div class="row">
                     <div class="input-field col s6">
                         <label for="txtNomeProduto">Nome</label>
@@ -12,10 +17,10 @@
                     </div>
                     <div class="input-field col s6">
                         <label for="txtEstoque">Cpf</label>
-                        <input type="number" id="txtEstoque">
+                        <input id="txtEstoque" name="Estoque" type="number">
                     </div>
                 </div>
-            </form>
+            }
         </div>
     </div>
     <div class="modal-footer">
@@ -25,3 +30,24 @@
     </div>
 </div>
 
+<script>
+
+    function RecarregaGrid(data) {
+        //Exibindo um feedback de sucesso
+        Materialize.Toast(data, 1000);
+
+        //Fazendo a requisição no método que lista os produtos
+        $.get('@Url.Action("Listar")').success(function(data) {
+            $("#gridProdutos tbody").html(data).slideDown("fast");
+        }).error(function(xhr) {
+            Materialize.toast(xhr.responseText, 4000);
+        });
+    }
+
+    function Error(xhr) {
+        Materialize.toast(xhr.responseText, 5000);
+    }
+
+    $('.modal').modal();
+
+</script>
