--- a/ProjetoCursoFeriasSMN/Views/Produto/TableProdutos.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/TableProdutos.cshtml
@@ -5,7 +5,7 @@
 <div id="modalEdicaoProduto"></div>
 <div id="modalDeletaProduto"></div>
 <div id="modalDetalharProduto"></div>
-@Html.Partial("CadastraProduto")
+@Html.Partial("../Produto/CadastraProduto")
 
 <table class="striped" id="gridProdutos">
     <thead>
@@ -21,7 +21,7 @@
             </th>
         </tr>
     </thead>
-    <tbody></tbody>
+    <tbody style="display: none"></tbody>
 </table>
 
 <script>
