--- a/ProjetoCursoFeriasSMN/Views/Venda/TableVendas.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Venda/TableVendas.cshtml
@@ -18,6 +18,6 @@
     </tr>
     </thead>
     <tbody>
-        @Html.Partial("GridVendas")
+        @Html.Partial("../Venda/GridVendas")
     </tbody>
 </table>
