--- a/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
@@ -5,24 +5,30 @@
     <div class="modal-content">
         <h4 class="bold">Deseja mesmo deletar este produto? </h4>
         <div class="row">
-            <form class="col s12" action="@Url.Action("DeletarConfirmado")">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <label for="txtIdProduto">Código do produto</label>
-                        <input id="txtIdProduto" name="Id" type="text" disabled value="@Model.CodigoProduto">
-                    </div>
+            @Ajax.BeginForm("DeletarConfirmado", "Produto", new AjaxOptions
+       {
+           HttpMethod = "GET",
+           OnSuccess = "RecarregaGrid(data)",
+           OnFailure = "Error(xhr)"
+       }){
+            <input type="hidden" id="codigoProduto" name="codigoProduto" value="@Model.CodigoProduto"/>
+            <div class="row">
+                <div class="input-field col s12">
+                    <label for="txtIdProduto">Código do produto</label>
+                    <input id="txtIdProduto" name="Id" type="text" disabled value="@Model.CodigoProduto">
                 </div>
-                <div class="row">
-                    <div class="input-field col s6">
-                        <label for="txtNomeProduto">Nome</label>
-                        <input id="txtNomeProduto" name="Nome" type="text" disabled value="@Model.Nome">
-                    </div>
-                    <div class="input-field col s6">
-                        <label for="txtEstoque">Cpf</label>
-                        <input type="number" name="estoque" id="txtEstoque" disabled value="@Model.Estoque">
-                    </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <label for="txtNomeProduto">Nome</label>
+                    <input id="txtNomeProduto" name="Nome" type="text" disabled value="@Model.Nome">
                 </div>
-            </form>
+                <div class="input-field col s6">
+                    <label for="txtEstoque">Cpf</label>
+                    <input type="number" name="estoque" id="txtEstoque" disabled value="@Model.Estoque">
+                </div>
+            </div>
+            }
         </div>
     </div>
     <div class="modal-footer">
@@ -31,3 +37,23 @@
         </a>
     </div>
 </div>
+
+<script>
+
+    function RecarregaGrid(data) {
+        //Exibindo um feedback de sucesso
+        Materialize.Toast(data, 1000);
+
+        //Fazendo a requisição no método que lista os produtos
+        $.get('@Url.Action("Listar")').success(function (data) {
+            $("#gridProdutos tbody").html(data).slideDown("fast");
+        }).error(function (xhr) {
+            Materialize.toast(xhr.responseText, 4000);
+        });
+    }
+
+    function Error(xhr) {
+        Materialize.toast(xhr.responseText, 5000);
+    }
+
+</script>
