master - Adicionando modals de detalhes e deletar venda e corrigindo métodos delete da application e API

--- a/ProjetoCursoFeriasSMN/Views/Cliente/DeletaCliente.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/DeletaCliente.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = null;}
-@model ProjetoCursoFeriasSMN.Models.Cliente
+@model ProjetoCursoFeriasSMN.Web.Application.Model.Cliente
 
 <div id="modalDeletarCliente" class="modal">
     <div class="modal-content">
