--- a/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = null;}
-@model IEnumerable<ProjetoCursoFeriasSMN.Models.Cliente>
+@model IEnumerable<ProjetoCursoFeriasSMN.Web.Application.Model.Cliente>
 
 @if (Model != null && Model.Any())
 {
