--- a/ProjetoCursoFeriasSMN/Views/Cliente/TableClientes.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/TableClientes.cshtml
@@ -82,8 +82,7 @@
                     codigoCliente: codigoCliente
                 })
             .done(function (data) {
-                $("#modalDeletarCliente").html(data);
-                $('#modalDeletarCliente').modal("open");
+                $("#gridVendas tbody").html(data).slideDown("fast");
             }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
