--- a/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/DeletaProduto.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = null;}
-@model ProjetoCursoFeriasSMN.Models.Produto
+@model ProjetoCursoFeriasSMN.Web.Application.Model.Produto
 
 <div id="modalDeletarProduto" class="modal">
     <div class="modal-content">
