--- a/ProjetoCursoFeriasSMN/Views/Venda/TableVendas.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Venda/TableVendas.cshtml
@@ -17,7 +17,5 @@
         </th>
     </tr>
     </thead>
-    <tbody>
-        @Html.Partial("../Venda/GridVendas")
-    </tbody>
+    <tbody style="display: none"></tbody>
 </table>
