--- a/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = null;}
-@model ProjetoCursoFeriasSMN.Models.Cliente
+@model ProjetoCursoFeriasSMN.Web.Application.Model.Cliente
 
 <div id="modalEdicaoCliente" class="modal">
     <div class="modal-content">
