--- a/ProjetoCursoFeriasSMN/Views/Produto/DetalhaProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/DetalhaProduto.cshtml
@@ -1,11 +1,11 @@
 ﻿@{ Layout = null;}
-@model ProjetoCursoFeriasSMN.Models.Produto
+@model ProjetoCursoFeriasSMN.Web.Application.Model.Produto
 
 <div id="modalDetalhesProduto" class="modal">
     <div class="modal-content">
-        <h4 class="bold">Deseja mesmo deletar este produto? </h4>
+        <h4 class="bold">@Model.Nome</h4>
         <div class="row">
-            <form class="col s12" action="@Url.Action("DeletarConfirmado")">
+            <form class="col s12">
                 <div class="row">
                     <div class="input-field col s12">
                         <label for="txtIdProduto">Código do produto</label>
