--- a/ProjetoCursoFeriasSMN/Views/Produto/GridProdutos.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/GridProdutos.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = null;}
-@model IEnumerable<ProjetoCursoFeriasSMN.Models.Produto>
+@model IEnumerable<ProjetoCursoFeriasSMN.Web.Application.Model.Produto>
     
 @if (Model != null && Model.Any())
 {
