--- a/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
@@ -37,3 +37,68 @@ else
         <td colspan="5">Nenhum registro encontrado</td>
     </tr>
 }
+
+<script>
+
+    function DetalhesCliente(element) {
+        var codigoCliente = $(element).closest("tr").attr("data-codigoCliente");
+
+        //Carregando os dados da modal
+        $.get('@Url.Action("DetalharCliente","Cliente")',
+                {
+                    codigoCliente: codigoCliente
+                })
+            .done(function (data) {
+                $("#modalDetalharCliente").html(data);
+                //Abrindo a modal
+                $('#modalDetalhesCliente').modal("open");
+            }).fail(function (xhr) {
+                Materialize.toast(xhr.responseText, 5000);
+            });
+    }
+
+    function EditaCliente(element) {
+        var codigoCliente = $(element).closest("tr").attr("data-codigoCliente");
+
+        $.get('@Url.Action("Editar","Cliente")',
+                {
+                    codigoCliente: codigoCliente
+                })
+            .done(function (data) {
+                $("#modalEditarCliente").html(data);
+                $('#modalEdicaoCliente').modal("open");
+            }).fail(function (xhr) {
+                Materialize.toast(xhr.responseText, 5000);
+            });
+    }
+
+    function DeletaCliente(element) {
+        var codigoCliente = $(element).closest("tr").attr("data-codigoCliente");
+
+        $.get('@Url.Action("Deletar","Cliente")',
+                {
+                    codigoCliente: codigoCliente
+                })
+            .done(function (data) {
+                $("#modalDeletarCliente").html(data);
+                $('#modalDeletarCliente').modal("open");
+            }).fail(function (xhr) {
+                Materialize.toast(xhr.responseText, 5000);
+            });
+    }
+
+    function ListaVendas(element) {
+        var codigoCliente = $(element).closest("tr").attr("data-codigoCliente");
+
+        $.get('@Url.Action("Listar","Venda")',
+                {
+                    codigoCliente: codigoCliente
+                })
+            .done(function (data) {
+                $("#gridVendas tbody").html(data).slideDown("fast");
+            }).fail(function (xhr) {
+                Materialize.toast(xhr.responseText, 5000);
+            });
+    }
+
+</script>
